[package]
name = "aoc2024"
edition = "2021"

[dependencies]
anyhow = "1.0"
regex = "1.11.1"

[[bin]]
name = "day1"
path = "src/day1.rs"

[[bin]]
name = "day1-2"
path = "src/day1-2.rs"

[[bin]]
name = "day2"
path = "src/day2.rs"

[[bin]]
name = "day2-2"
path = "src/day2-2.rs"

[[bin]]
name = "day3"
path = "src/day3.rs"

[[bin]]
name = "day3-2"
path = "src/day3-2.rs"

[[bin]]
name = "day4"
path = "src/day4.rs"


[[bin]]
name = "day4-2"
path = "src/day4-2.rs"

[[bin]]
name = "day5"
path = "src/day5.rs"
