[package]
name = "aoc2024"
edition = "2021"

[dependencies]
anyhow = "1.0"
memoize = "0.4.2"
regex = "1.11.1"

[[bin]]
name = "day1"
path = "src/day1.rs"

[[bin]]
name = "day1-2"
path = "src/day1-2.rs"

[[bin]]
name = "day2"
path = "src/day2.rs"

[[bin]]
name = "day2-2"
path = "src/day2-2.rs"

[[bin]]
name = "day3"
path = "src/day3.rs"

[[bin]]
name = "day3-2"
path = "src/day3-2.rs"

[[bin]]
name = "day4"
path = "src/day4.rs"


[[bin]]
name = "day4-2"
path = "src/day4-2.rs"

[[bin]]
name = "day5"
path = "src/day5.rs"

[[bin]]
name = "day5-2"
path = "src/day5-2.rs"

[[bin]]
name = "day6"
path = "src/day6.rs"

[[bin]]
name = "day6-2"
path = "src/day6-2.rs"

[[bin]]
name = "day7"
path = "src/day7.rs"

[[bin]]
name = "day7-2"
path = "src/day7-2.rs"

[[bin]]
name = "day8"
path = "src/day8.rs"

[[bin]]
name = "day8-2"
path = "src/day8-2.rs"

[[bin]]
name = "day9"
path = "src/day9.rs"

[[bin]]
name = "day9-2"
path = "src/day9-2.rs"

[[bin]]
name = "day10"
path = "src/day10.rs"

[[bin]]
name = "day10-2"
path = "src/day10-2.rs"
